Update api weather project

--- a/exemplo-projeto.html
+++ b/exemplo-projeto.html
@@ -8,7 +8,7 @@
 
 <head>
 	<!-- COLOCAR O NOME DO PROJETO AQUI -->
-	<title>NOME DO PROJETO</title>
+	<title>PROJECT NAME</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
@@ -33,10 +33,10 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/img01.png" alt="" /></a>
 			<ul class="sidebar">
-				<li><a href="index.html" class="sidebar-link">Início</a></li>
-				<li><a href="sobre.html" class="sidebar-link">Sobre mim</a></li>
-				<li><a href="portfolio.html" class="sidebar-link">Projetos</a></li>
-				<li><a href="certificados.html" class="sidebar-link">Certificados</a></li>
+				<li><a href="index.html" class="sidebar-link">Home</a></li>
+				<li><a href="sobre.html" class="sidebar-link">About me</a></li>
+				<li><a href="portfolio.html" class="sidebar-link">Projects</a></li>
+				<li><a href="certificados.html" class="sidebar-link">Certificates</a></li>
 			</ul>
 		</div>
 	</header>
@@ -46,20 +46,20 @@
 		<section id="projeto-header">
 			<header class="major">
 				<div class="col-12"></div>
-				<h2>NOME DO PROJETO</h2>
+				<h2>PROJECT NAME</h2>
 			</header>
 			<ul class="actions fit small">
 				<li>
-					<a href="#" class="button icon brands small fit fa-github solid" target="_blank">Repositório do Github</a>
+					<a href="#" class="button icon brands small fit fa-github solid" target="_blank">Github repository</a>
 				</li>
 				<li>
-					<a href="#" class="button fit small"  target="_blank">OUTRO LINK</a>
+					<a href="#" class="button fit small"  target="_blank">ANOTHER LINK</a>
 				</li>
 			</ul>
 		</section>
 		<!-- BLOCO DE CONTEUDO -->
 		<section id="sobre">
-			<h2>Sobre o projeto</h2>
+			<h2>About the project</h2>
 			<p><span class="image right"><img src="images/thumbs/apihg.jpg" alt=""></span>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas egestas scelerisque urna ac tempor.
 				Nulla nec lorem posuere, iaculis lectus sed, molestie erat. In bibendum eleifend lectus, euismod
@@ -71,7 +71,7 @@
 		</section>
 		<!-- FIM DO BLOCO DE CONTEUDO -->
 		<ul class="actions">
-			<li><a href="portfolio.html" class="button icon solid fa-arrow-left">Voltar</a></li>
+			<li><a href="portfolio.html" class="button icon solid fa-arrow-left">Back</a></li>
 		</ul>
 	</div>
 
