update web automation

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto04_automacao.html" class="image fit thumb"><img
 							src="images/thumbs/selenium.png" alt="" /></a>
-					<h3>Web Automation - Selenium</h3>
+					<h3>Web automation - Selenium</h3>
 					<p>Website purchase simulation using Selenium.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
